# UCD_2x2_Analysis_Framework

./: .gitignore  AGENTS.md  README.md  pyproject.toml  stage2_summary.json
configs/stage2/: dbscan_default.yaml  repeated_pixel_then_dbscan.yaml
docs/: architecture.md  batch_runner.md  development.md  event_display.md  stage2_pipeline.md  writing_cuts.md  writing_stage2_cuts.md  yaml_configs.md
src/ucd2x2/: README.md  __init__.py  cli.py
src/ucd2x2/core/: README.md  __init__.py  clustering.py  geometry.py  io.py  truth.py
src/ucd2x2/display/: README.md  __init__.py  app_panel.py  viz.py
src/ucd2x2/stage2/: README.md  config.py  masking.py  pipeline_ui.py  run_stage2.py  ui_config.py
src/ucd2x2/stage2/cuts/: README.md  dbscan_cluster_producer.py
tests/: sample_data.hdf5  test_cli.py  test_smoke.py  test_stage2_batch.py  test_stage2_config.py  test_stage2_pipeline.py  test_stage2_pipeline_ui.py  test_stage2_repeated_pixel_filter.py  test_stage2_ui_config.py  test_stage2_widgets.py  test_truth.py  test_truth_overlay_compat.py
twobytwo_display/: __init__.py  app_panel.py  selection.py  viz.py
twobytwo_display/stage2/: __init__.py  config.py  pipeline.py  run_stage2.py  widgets.py
twobytwo_display/stage2/cuts/: __init__.py  dbscan_cluster_producer.py  repeated_pixel_filter.py
