[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucd2x2-analysis"
version = "0.1.0"
description = "UCD 2x2 analysis framework (event display + Stage 2 pipeline)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "h5py",
  "matplotlib",
  "plotly",
  "panel>=1.4",
  "scikit-learn",
  "PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ucd2x2*"]
exclude = ["tests*", "outputs*"]

[project.urls]
Home = "https://example.invalid"

[project.optional-dependencies]
dev = [
  "pytest",
]
